<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.carolpesena.watchdogsapp.ScheduleActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/hor_rio_de_ativa_o"
        android:textSize="15dp" />


    <TimePicker
        android:id="@+id/activation_time"
        android:timePickerMode="spinner"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:text="@string/hor_rio_de_desativa_o"
        android:textSize="15dp" />

    <TimePicker
        android:id="@+id/deactivation_time"
        android:timePickerMode="spinner"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/button_save_schedule"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/salvar"
        android:textSize = "10sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorAccent"/>


</LinearLayout>
